--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@ $( document ).ready(function() {
 	console.log(encodeURI("music/haozcq/"+getBackgroundMusicName(musicSeed)));
 	$("#music i").text(getBackgroundMusicName(musicSeed).replace(".mp3","") + " Music");
 	// shuffle slider image list
-	var imageList = ["https://c2.staticflickr.com/8/7720/16849991617_803e7143a2_h.jpg", 
-	 				"http://7tsz6h.com1.z0.glb.clouddn.com/imgnh_bg2.jpg",
+	var imageList = ["http://7ktooa.com1.z0.glb.clouddn.com/1.jpg", 
 					"<img src="1.jpg" />",
 	 				].sort(function(){return .5 - Math.random();});
 	 $.backstretch(imageList, {centeredX:false, speed:1000});
