--- a/index.html
+++ b/index.html
@@ -103,16 +103,14 @@ $(function(){
 });
 </script>
 
+<div style="display:none">
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_2990535'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/stat.php%3Fid%3D2990535' type='text/javascript'%3E%3C/script%3E"));</script>
 
-// scripts for google analytics
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/2099171.js"></script>
+<noscript><a href="http://www.51.la/?2099171" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/2099171.asp" style="border:none" /></a></noscript>
+</div>
 
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-37054944-2', 'auto');
-ga('send', 'pageview');
 </script>
 </body>	
 </html>
