--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>浩儿</title>
+	<title>浩儿-Byound the Mind</title>
 	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<meta name="robots" content="all" />
@@ -68,9 +68,9 @@
 <div id="about"> 
 	<p>您好！我白天是个民工，晚上就是个有抱负的演员，这是我的个人主页。我住在天朝的雾都，想有条叫做 Jack 的狗。</p>
 	<p><a href = "https://bymindsite.wordpress.com/" target="_blank">Old blog</a>：
-	2008年奥运会期间建立的博客，想想直到现在都是在瞎折腾，是该静下心来干点自己的事情了。</p>
+	2008年奥运会期间建立的博客，想想直到现在都是在瞎折腾，是该静下心来干点自己的事了。</p>
 	<p><a target="_blank" href = "http://weibo.com/haomicblog">微博主页</a>：
-	一般来说这里是自己吐槽的地方。</p>
+	这里是吐槽的地方。</p>
 	<p><a target="_blank" href = "http://chenyifaer.taobao.com/">Twitter</a>：
 	偶尔看看外面的世界。</p>
 	<p><a target="_blank" href = "http://music.163.com/#/user/home?id=47740038">网易音乐</a>：无聊的时候听听歌。</p>
