--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("1.jpg", {speed: 150});
+             $.backstretch("http://7ktooa.com1.z0.glb.clouddn.com/1.jpg", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
