--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>浩儿-Byound the Mind</title>
+	<title>Hao's Page - Byound the Mind</title>
 	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<meta name="robots" content="all" />
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta http-equiv="imagetoolbar" content="false" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="keywords" content="浩儿,haoer">
-	<meta name="description" content="浩儿的个人主页">
+	<meta name="keywords" content="haoer">
+	<meta name="description" content="Hao's Page">
 	<meta name="baidu-site-verification" content="XXX" />
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
