--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div id="about"> 
 	<p>您好！我白天是个民工，晚上就是个有抱负的演员，这是我的个人主页。我住在天朝的雾都，想有条叫做 Jack 的狗。</p>
 	<p><a href = "https://bymindsite.wordpress.com/" target="_blank">Old Blog</a>：
-	2008年奥运会期间建立的博客，想想直到现在都是在瞎折腾，是该静下心来干点自己的事了。</p>
+	2008年奥运会期间建立的博客，想想直到现在都是瞎折腾，是该静下心来干点自己的事了。</p>
 	<p><a target="_blank" href = "http://weibo.com/haomicblog">微博主页</a>：
 	这里是吐槽的地方。</p>
 	<p><a target="_blank" href = "https://twitter.com/haozcq">Twitter</a>：
