--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div id="footer">
 	<div id="music" style="text-align: center">
 		<audio autoplay loop src = "#"> </audio>
-		<a href="javascript:void(0)" onclick="toggleMuteMusic();" title="Volume" ><img style = "margin-bottom: 0px"id="volume" src="volumeOn.png" alt=""> </a><a href="javascript:void(0)" onclick="changeMusic()"><span style="text-shadow: 1px 1px 3px rgba(0,0,0,1); color: rgba(255,255,255,0.7);vertical-align: middle; line-height: normal;display: inline-block;margin-top:-17px"><i>dying in the sun</i></span></a>
+		<a href="javascript:void(0)" onclick="toggleMuteMusic();" title="Volume" ><img style = "margin-bottom: 0px"id="volume" src="volumeOn.png" alt=""> </a><a href="javascript:void(0)" onclick="changeMusic()"><span style="text-shadow: 1px 1px 3px rgba(0,0,0,1); color: rgba(255,255,255,0.7);vertical-align: middle; line-height: normal;display: inline-block;margin-top:-17px"><i>sun</i></span></a>
 	</div>
 	<div class="copyright">
 		<p><em>© Created by <a href="http://www.haoer.net">Hao</a> 2016 Powered by <a href="https://github.com/weightshift/The-Personal-Page">The-Personal-Page</a></em></p>
