--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("https://raw.githubusercontent.com/haozcq/haozcq.github.io/master/background.jpg", {speed: 150});
+             $.backstretch("https://raw.githubusercontent.com/haozcq/haozcq.github.io/master/background-pic.jpg", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
