--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="twitter:site" content="@hi_caicai">
 <meta name="twitter:title" content="CaiCai,Product Designer">
 <meta name="author" content="CaiCai,hi@cai-cai.me">
-<meta name="twitter:description" content="My name is CaiCai based in China. Now, work for Alipay.">
+<meta name="twitter:description" content="My name is hao based in China.">
 <meta name="twitter:image" content="https://cdn.cai-cai.me/x/qRBwHrDjzcuDAAPQWxCD.png">
 <meta name="apple-mobile-web-app-capable" content="CaiCai">
 <link rel="shortcut icon" href="/img/favicon.png">
@@ -26,7 +26,7 @@
 <div class="header">
     <div class="nav">
   <ul>
-    <li><a href="/"><img class="site_logo" src="https://cdn.cai-cai.me/x/maenEPPAiPmDuOIFGYbM.png"/></a></li>
+    <li><a href="/"><img class="site_logo" src="https://s2.ax1x.com/2019/10/20/KK3AWF.png"/></a></li>
     <li><a href="/photos">Photos</a></li>
     <li><a href="/gallery">Gallery</a></li>
     <li><a href="https://blog.haoer.net">Blog</a></li>
