--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:title" content="CaiCai,Product Designer">
 <meta name="author" content="CaiCai,hi@cai-cai.me">
 <meta name="twitter:description" content="My name is hao based in China.">
-<meta name="twitter:image" content="https://cdn.cai-cai.me/x/qRBwHrDjzcuDAAPQWxCD.png">
+<meta name="twitter:image" content="https://s2.ax1x.com/2019/10/20/KK3AWF.png">
 <meta name="apple-mobile-web-app-capable" content="CaiCai">
 <link rel="shortcut icon" href="/img/favicon.png">
 <link rel="apple-touch-icon" href="https://cdn.cai-cai.me/x/3uaisyd.png">
@@ -87,7 +87,7 @@
 </body>
 <div class="footer">
   <div class="container has-text-centered">
-    <p>Designed by &copy; <a href="https://www.caicai.me">CaiCai</a></p>
+    <p>&copy; Created by HAO 2019. Designed by <a href="https://www.caicai.me">CaiCai</a></p>
   </div>
 </div>
 
