--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="twitter:title" content="CaiCai,Product Designer">
 <meta name="author" content="CaiCai,hi@cai-cai.me">
 <meta name="twitter:description" content="My name is hao based in China.">
-<meta name="twitter:image" content="https://s2.ax1x.com/2019/10/20/KK3AWF.png">
+<meta name="twitter:image" content="https://s2.ax1x.com/2019/10/20/KKBa0U.png">
 <meta name="apple-mobile-web-app-capable" content="CaiCai">
 <link rel="shortcut icon" href="/img/favicon.png">
 <link rel="apple-touch-icon" href="https://cdn.cai-cai.me/x/3uaisyd.png">
@@ -26,7 +26,7 @@
 <div class="header">
     <div class="nav">
   <ul>
-    <li><a href="/"><img class="site_logo" src="https://s2.ax1x.com/2019/10/20/KK3AWF.png"/></a></li>
+    <li><a href="/"><img class="site_logo" src="https://s2.ax1x.com/2019/10/20/KKBa0U.png"/></a></li>
     <li><a href="/photos">Photos</a></li>
     <li><a href="/gallery">Gallery</a></li>
     <li><a href="https://blog.haoer.net">Blog</a></li>
@@ -36,8 +36,9 @@
     <div class="info">
         <h1 class="site_title">HAO</h1>
         <p class="site_description">Product Designer 👽</p>
-        <a class="telegram" href="https://t.me/haozcq">telegram.me/haozcq</a> <div class="social">
-    
+        <a class="telegram" href="https://t.me/haozcq">telegram.me/haozcq</a> 
+
+    <div class="social">
     <a class="level-item" href="https://twitter.com/haozcq">
         <span class="icon">
             <i class="fa fa-twitter"></i>
@@ -62,7 +63,7 @@
         </span>
     </a>
     
-</div>
+    </div>
 
     </div>
 </div>
