--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         <p style="color:#8a8989;">Some others</p>
         <br>
         <li>
-            <p><a href="www.haoer.net">ANT X</a> - A sitemap template</p>
+            <p><a href="http://www.haoer.net/">ANT X</a> - A sitemap template</p>
         </li>
         <li>
-            <p><a href="www.haoer.net">CISCA</a> - A  theme</p>
+            <p><a href="http://www.haoer.net/">CISCA</a> - A  theme</p>
         </li>
 
 
