--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 </div>
 <div class="work">
-        <p style="width:100%;max-width:600px;">我白天是个民工，晚上就是个有抱负的演员，这是我的个人主页。我住在天朝的雾都，想有条叫做 Jack 的狗。</p>
+        <p style="width:100%;max-width:600px;">I am a migrant worker during the day and an aspiring actor at night. This is my personal homepage. I live in the city of fog，China.  I want a dog named Jack.</p>
     <div class="p_links">
         <p style="color:#8a8989;">Some others</p>
         <br>
