--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="I am a ">
 <meta name="keywords" content="DIYer, python">
 <meta content="HAO · Byound the Mind" property="og:title">
-<title>hao · A Product Designer</title>
+<title>HAO · beyound The Mind</title>
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@hi_caicai">
 <meta name="twitter:title" content="CaiCai,Product Designer">
