--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta name="description" content="I am a ">
+<meta name="description" content="I am a... ">
 <meta name="keywords" content="DIYer, python">
 <meta content="HAO · Byound the Mind" property="og:title">
 <title>HAO · beyound The Mind</title>
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@hi_caicai">
-<meta name="twitter:title" content="CaiCai,Product Designer">
-<meta name="author" content="CaiCai,hi@cai-cai.me">
+<meta name="twitter:site" content="@haozcq">
+<meta name="twitter:title" content="Product Designer">
+<meta name="author" content=" ">
 <meta name="twitter:description" content="My name is hao based in China.">
 <meta name="twitter:image" content="https://s2.ax1x.com/2019/10/20/KKBa0U.png">
-<meta name="apple-mobile-web-app-capable" content="CaiCai">
+<meta name="apple-mobile-web-app-capable" content="HAO">
 <link rel="shortcut icon" href="/img/favicon.png">
-<link rel="apple-touch-icon" href="https://cdn.cai-cai.me/x/3uaisyd.png">
+<link rel="apple-touch-icon" href="/img/3uaisyd.png">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/js/griddd.min.css">
 <link rel="stylesheet" href="/js/animate.css">
