--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="description" content="I am a... ">
 <meta name="keywords" content="DIYer, python">
-<meta content="HAO · Byound the Mind" property="og:title">
-<title>HAO · beyound The Mind</title>
+<meta content="HAO - Byound the Mind" property="og:title">
+<title>HAO - beyound The Mind</title>
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@haozcq">
 <meta name="twitter:title" content="Product Designer">
@@ -35,7 +35,7 @@
 </div>
     <div class="info">
         <h1 class="site_title">HAO</h1>
-        <p class="site_description">Product Designer 👽</p>
+        <p class="site_description">Product Designer 🍀</p>
         <a class="telegram" href="https://t.me/haozcq">telegram.me/haozcq</a> 
 
     <div class="social">
