--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <ul>
     <li><a href="/"><img class="site_logo" src="https://s2.ax1x.com/2019/10/20/KKBa0U.png"/></a></li>
     <li><a href="/photos">Photos</a></li>
-    <li><a href="/gallery">Gallery</a></li>
+    <li><a href="/Lab">Lab</a></li>
     <li><a href="https://blog.haoer.net">Blog</a></li>
-    <li><a href="mailto:hello@haoer.net">Email</a></li>
+    <li><a href="mailto:hi@haoer.net">Email</a></li>
   </ul>
 </div>
     <div class="info">
