--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li><a href="/"><img class="site_logo" src="https://s2.ax1x.com/2019/10/20/KKBa0U.png"/></a></li>
     <li><a href="/photos">Photos</a></li>
     <li><a href="/Lab">Lab</a></li>
-    <li><a href="http://www.haoer.net/blog">Blog</a></li>
+    <li><a href="http://blog.haoer.net/">Blog</a></li>
     <li><a href="mailto:hi@haoer.net">Email</a></li>
   </ul>
 </div>
